# judicious

./: .dockerignore  .eslintrc.json  .gitignore  CITATION.cff  README.md  next-i18next.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
components/: CodeCell.tsx  CodeEditor.tsx  MoreOptionsButton.tsx  OutputArea.tsx  PageFooter.tsx  Popover.tsx  Popup.tsx  RunButton.tsx  SolitaryCodeCell.tsx
components/documentation/: CodeElement.tsx  ConfigButtons.tsx  ConstantDiagram.tsx  DocElement.tsx  DocElementCard.tsx  DocumentationStripe.tsx  FunctionDiagram.tsx  FunctionDocumentation.tsx  LibraryName.tsx  TypeConstantDocumentation.tsx  utils.ts
pages/: _app.tsx  _document.tsx  _error.tsx  index.tsx
public/docs/: builtins.json  functools.json  math.json  pytamaro.de.json  pytamaro.fr.json  pytamaro.it.json  pytamaro.json  random.json  string.json
public/locales/en/: common.json
src/: codeExecution.ts  createEmotionCache.ts  documentation.ts  playground.ts  pythonTraceback.ts  serverSideTranslationProps.ts  sourceUtils.ts  strictPython3.ts  theme.ts  useActivity.ts  usePyodide.ts  useReset.ts
src/localStorage/: schema.ts  useLocalActivity.ts  useLocalProfile.ts
src/python-analyzer/: package.json  python_analyzer.d.ts  python_analyzer.js  python_analyzer_bg.js  python_analyzer_bg.wasm  python_analyzer_bg.wasm.d.ts
src/schemas/: activitySchema.ts  documentation.ts
style/: styles.css
tools/python-analyzer/: Cargo.toml
tools/python-analyzer/src/: lib.rs  main.rs
tools/python-analyzer/tests/: analyzer.rs
