[package]
name = "python-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
rustpython-parser = "0.3.1"
rustpython-ast = { version = "0.3.1", features = ["unparse", "visitor"] }
